@@ -1,11 +1,11 @@
-<!-- start of $Id: menu_inbox_status.php,v 1.11 2006/11/22 14:27:17 goddess_skuld Exp $ -->
+<!-- start of $Id: menu_inbox_status.php,v 1.12 2007/01/03 10:30:12 goddess_skuld Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
 ?>
 <?php if($list_of_folders != "") { ?>
                       <tr>
-                        <td colspan="6">
+                        <td colspan="<?php echo count($conf->column_order) + 1; ?>">
                           <table class="inboxStatus">
                             <tr>
                                <td class="right">
@@ -19,4 +19,4 @@
                          </td>
                        </tr>
 <?php } ?>
-<!-- end of $Id: menu_inbox_status.php,v 1.11 2006/11/22 14:27:17 goddess_skuld Exp $ -->
+<!-- end of $Id: menu_inbox_status.php,v 1.12 2007/01/03 10:30:12 goddess_skuld Exp $ -->
